<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="splashVM" type="com.application.app.modules.splash.data.viewmodel.SplashVM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_900">
        <TextView android:gravity="top|start"
            android:id="@+id/txtFinalyticsApp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_50pxh"
            android:layout_marginStart="@dimen/_50pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:text="@{splashVM.splashModel.txtFinalyticsApp}"
            style="@style/textStylePoppinssemibold22" tools:text="@string/lbl_finalytics_app"/>
        <ImageView android:id="@+id/image"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_251pxv"
            android:layout_marginEnd="@dimen/_45pxh"
            android:layout_marginStart="@dimen/_45pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_273pxh"
            imageRes="@{@drawable/img_undrawmobileappsre3wjf_1}" tools:src="@drawable/img_undrawmobileappsre3wjf_1"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtGetAnalysisOf"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_5pxv"
            android:text="@{splashVM.splashModel.txtGetAnalysisOf}"
            style="@style/textStylePoppinssemibold18" tools:text="@string/msg_get_analysis_of"/>
        <LinearLayout android:id="@+id/linear1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <TextView android:gravity="top|center"
                android:id="@+id/txtClickOnGetSt"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_119pxv"
                android:layout_width="match_parent"
                android:text="@{splashVM.splashModel.txtClickOnGetSt}"
                style="@style/textStyleLibreFranklinsemibold18" tools:text="@string/msg_click_on_get_st"/>
            <androidx.appcompat.widget.AppCompatButton
                android:clickable="true" android:gravity="center"
                android:id="@+id/btnGetStarted"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_119pxv"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:text="@string/lbl_get_started"
                android:textAllCaps="false"
                style="@style/textStylePoppinssemibold18_1" tools:text="@string/lbl_get_started"/>
        </LinearLayout>
    </LinearLayout>
</layout>
