<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone11ProX3VM" type="com.application.app.modules.iphone11prox3.data.viewmodel.Iphone11ProX3VM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleindigo_a700">
        <ImageView android:id="@+id/image"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_175pxv"
            android:layout_marginEnd="@dimen/_50pxh"
            android:layout_marginStart="@dimen/_50pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="@dimen/_188pxh"
            android:scaleType="centerCrop"
            imageRes="@{@drawable/img_pngtreeman_user_login_id_identity5254197_1}" tools:src="@drawable/img_pngtreeman_user_login_id_identity5254197_1"/>
        <LinearLayout android:id="@+id/linear1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/image1"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_67pxv"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="@dimen/_72pxh"
                android:scaleType="centerCrop"
                imageRes="@{@drawable/img_receive_dollar}" tools:src="@drawable/img_receive_dollar"/>
            <TextView android:gravity="top|start"
                android:id="@+id/txtWelcomeBack"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:text="@{iphone11ProX3VM.iphone11ProX3Model.txtWelcomeBack}"
                style="@style/textStylePoppinssemibold24" tools:text="@string/lbl_welcome_back"/>
            <EditText android:fontFamily="@font/poppins"
                android:gravity="top|start"
                android:hint="@string/lbl_username"
                android:id="@+id/etUsername"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_24pxv"
                android:paddingStart="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@={iphone11ProX3VM.iphone11ProX3Model.etUsernameValue}"
                android:textColor="@color/black_900"
                android:textColorHint="@color/black_900"
                android:textFontWeight="400"
                android:textSize="@dimen/_18sp" android:textStyle="normal"/>
            <EditText android:fontFamily="@font/poppins"
                android:gravity="top|start"
                android:hint="@string/lbl_password"
                android:id="@+id/etPassword"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_27pxv"
                android:singleLine="true"
                android:text="@={iphone11ProX3VM.iphone11ProX3Model.etPasswordValue}"
                android:textColor="@color/black_900"
                android:textColorHint="@color/black_900"
                android:textFontWeight="400"
                android:textSize="@dimen/_18sp" android:textStyle="normal"/>
            <FrameLayout android:id="@+id/frame"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent" style="@style/groupStyle">
                <ImageView android:clickable="true"
                    android:id="@+id/image2"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_37pxv"
                    android:layout_width="@dimen/_141pxh" android:src="@drawable/img_rectangle_6"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtSignIn"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_41pxh"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:text="@{iphone11ProX3VM.iphone11ProX3Model.txtSignIn}"
                    style="@style/textStylePublicSansbold18" tools:text="@string/lbl_sign_in"/>
            </FrameLayout>
            <LinearLayout android:id="@+id/linear2"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_107pxv"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_61pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/image3"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="centerCrop" android:src="@drawable/img_google_plus"/>
                <ImageView android:id="@+id/image4"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="centerCrop" android:src="@drawable/img_facebook"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
